# SC_HS_Proxy

./: .gitignore  AI.hs  Helpers.hs  LICENSE  bwapi-hsproxy.cabal
Proxy/: CommandTypes.hs  Commands.hs  Game.hs  Messages.hs  Orders.hs  Parsers.hs  Server.hs  Settings.hs  Tech.hs  TechTypes.hs  Unit.hs  UnitTypes.hs  Upgrade.hs  UpgradeTypes.hs
Proxy/Paul/: #Astar.hs#  Astar.hs  BSTree.hs  Ff3.hs  Game.hs  SimplePolygon.hs  Terrain.hs  TileList.hs  fib.hs
src/: .#PathFinding.hs  AIFunctions.hs  GraphBuild.hs  Hope.hs  Main.hs  Main2  PathFinding.hs  Settings.hs  Test.hs  hello  hello.hs
src/OLD/: Basics.hs  BwapiLoc.hs  BwapiRegBat.hs  RectTemp.hs
src/OLD/Paul/: Graph.hs  Terrain.hs
src/Proxy/: AI.hs  AIFunctions.hs  BwapiRegLoc.hs  Commands.hs  Helpers.hs  PARTSTUFF.hs  Rectangle.hs  Settings.hs
src/Proxy/.python/: gen_haskell.py  gen_tech_haskell.py  gen_unit_haskell.py  gen_upgrade_haskell.py
src/Proxy/AI/: AIControl.hs  Helpers.hs
src/Proxy/Command/: CommandControl.hs  Commands.hs
src/Proxy/Math/: DeltaGraph.hs  Graph.hs  Graph2.hs  InfNumber.hs  Interval.hs  Line.hs  Rectangle.hs
src/Proxy/PathFinding/: .#Dynamic.hs  AStar.hs  AStarState.hs  Dynamic.hs  FGLAStar.hs  FloydWarshall.hs  HinzAStar.hs  Pathfinding.hs  Specification.hs
src/Proxy/Paul/: AStar.hs  BoardGraph.hs  Ff.hs  Ff2.hs  GraphExploration.hs
src/Proxy/PotentialFields/: FieldManager.hs  MetaCommands.hs  NEW.hs  OLD.hs  PathfindingPotential.hs
src/Proxy/PreProcessing/: .#GraphConstructors.hs  .#PotentialField.hs  GraphConstructors.hs  MDALLEXTRAS.hs  MapDecompTemp.hs  QuadTree.hs  (+3 more)
(+19 files in other folders)
